<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.credit_record.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_calculate"
        android:name="com.example.credit_record.ui.calculate.CalculateFragment"
        android:label="@string/title_calculate"
        tools:layout="@layout/fragment_calculate" />

    <fragment
        android:id="@+id/nav_plan"
        android:name="com.example.credit_record.ui.plan.PlanFragment"
        android:label="@string/title_plan"
        tools:layout="@layout/fragment_plan" />

    <fragment
        android:id="@+id/nav_information"
        android:name="com.example.credit_record.ui.information.InformationFragment"
        android:label="@string/menu_information"
        tools:layout="@layout/fragment_information" />

    <fragment
        android:id="@+id/nav_score"
        android:name="com.example.credit_record.ui.score.ScoreFragment"
        android:label="@string/menu_score"
        tools:layout="@layout/fragment_score" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.credit_record.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>